--- a/resources/sass/styles/index.scss
+++ b/resources/sass/styles/index.scss
@@ -70,6 +70,12 @@
     padding-top: 5px;
 }
 
+.btn-default{
+    color: #878787;
+    background-color: $gray-200;
+    border-color: $gray-200;
+}
+
 .btn-info-detail{
     color: #fff;
     background-color: #17a2b8;
